Api praticamente finite, da testare con utilizzo vero

--- a/ApiEdilErreApp/efpt.config.json
+++ b/ApiEdilErreApp/efpt.config.json
@@ -37,6 +37,10 @@
       {
          "Name": "[dbo].[TabUtenti]",
          "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[VistaMisurazioniCampi]",
+         "ObjectType": 3
       }
    ],
    "UiHint": null,
