Aggiunta API List Card Info Campi nella dashboard e aggiunta utility controller con possibilità di generare misurazioni random

--- a/ApiEdilErreApp/efpt.config.json
+++ b/ApiEdilErreApp/efpt.config.json
@@ -1,6 +1,6 @@
 ﻿{
    "CodeGenerationMode": 4,
-   "ContextClassName": "CoraziendaSLContext",
+   "ContextClassName": "ApiCampiAgricoliContext",
    "ContextNamespace": null,
    "FilterSchemas": false,
    "IncludeConnectionString": true,
