Inserito controller microcontrollori con ricerca paginata e filtrata, sistemato trend controller definito e aggiornati i models con EF Core Power Tools

--- a/ApiEdilErreApp/efpt.config.json
+++ b/ApiEdilErreApp/efpt.config.json
@@ -1,6 +1,6 @@
 ﻿{
    "CodeGenerationMode": 4,
-   "ContextClassName": "ApiCampiAgricoliContext",
+   "ContextClassName": "CampiAgricoliContext",
    "ContextNamespace": null,
    "FilterSchemas": false,
    "IncludeConnectionString": true,
