Aggiunte logiche microcontrollori

--- a/ApiEdilErreApp/efpt.config.json
+++ b/ApiEdilErreApp/efpt.config.json
@@ -39,6 +39,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[VistaMicrocontrolloriUtente]",
+         "ObjectType": 3
+      },
+      {
          "Name": "[dbo].[VistaMisurazioniCampi]",
          "ObjectType": 3
       }
