Rimosso sensore NPK e sostituito con Temperatura Terreno. Ora esiste UmAmb, UmTerr, TempAmb, TempTerr

--- a/ApiEdilErreApp/efpt.config.json
+++ b/ApiEdilErreApp/efpt.config.json
@@ -43,7 +43,7 @@
          "ObjectType": 3
       },
       {
-         "Name": "[dbo].[VistaMisurazioniCampi]",
+         "Name": "[dbo].[VistaMisurazioniUtente]",
          "ObjectType": 3
       }
    ],
